@@ -27,7 +27,6 @@ testrun_compare ${abs_top_builddir}/src/readelf -d testfile-alldts <<\EOF
 Dynamic segment contains 66 entries:
  Addr: 0x000001a0  Offset: 0x000078  Link to section: [ 0] ''
   Type              Value
-  NULL              
   NEEDED            Shared library: [(null)]
   PLTRELSZ          3735928559 (bytes)
   PLTGOT            0xdeadbeef
@@ -93,6 +92,7 @@ Dynamic segment contains 66 entries:
   VERNEEDNUM        3735928559
   AUXILIARY         0xdeadbeef
   FILTER            0xdeadbeef
+  NULL              
 EOF
 
 exit 0
