@@ -34,7 +34,7 @@ testfiles testlib_dynseg.so
 
 testrun_compare ${abs_top_builddir}/src/readelf -d testlib_dynseg.so <<\EOF
 
-Dynamic segment contains 28 entries:
+Dynamic segment contains 23 entries:
  Addr: 0x00000000000017e0  Offset: 0x0007e0  Link to section: [ 3] '.dynstr'
   Type              Value
   PLTGOT            0x00000000000019c8
@@ -59,11 +59,6 @@ Dynamic segment contains 28 entries:
   VERDEFNUM         1
   VERNEED           0x0000000000000498
   VERNEEDNUM        2
-  NULL              
-  NULL              
-  NULL              
-  NULL              
-  NULL              
   NULL              
 EOF
 
